--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mysql2": "^1.6.4",
     "npm": "^6.7.0",
     "sequelize": "^4.42.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "vue-material": "^1.0.0-beta-10.2"
   }
 }
