--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "sequelize": "^4.42.0",
     "socket.io": "^2.2.0",
     "vue-material": "^1.0.0-beta-10.2"
+  },
+  "devDependencies": {
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0"
   }
 }
