--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "better-logging": "^3.3.2",
     "cas-authentication": "0.0.8",
+    "connect-history-api-fallback": "^1.6.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.5",
