--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.5",
     "mysql2": "^1.6.5",
+    "node-fetch": "^2.3.0",
     "npm": "^6.7.0",
     "sequelize": "^4.42.0",
     "socket.io": "^2.2.0",
