--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.5",
+    "moment": "^2.24.0",
     "mysql2": "^1.6.5",
     "node-fetch": "^2.3.0",
     "npm": "^6.7.0",
