--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mysql2": "^1.6.5",
     "node-fetch": "^2.6.0",
     "npm": "^6.7.0",
+    "safe-timers": "^1.1.0",
     "sequelize": "^5.18.4",
     "socket.io": "^2.2.0",
     "vue-dropdowns": "^1.0.6",
