--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "enqueue",
   "version": "1.0.0",
+  "repository": "https://github.com/pola/enqueue",
   "scripts": {
     "start": "node backend/index.js"
   },
@@ -9,20 +10,17 @@
     "cas-authentication": "0.0.8",
     "connect-history-api-fallback": "^1.6.0",
     "express": "^4.17.1",
-    "express-session": "^1.16.2",
+    "express-session": "^1.17.1",
     "express-socket.io-session": "^1.3.5",
     "mysql2": "^1.6.5",
     "node-fetch": "^2.6.0",
-    "npm": "^6.7.0",
+    "npm": "^6.14.5",
     "safe-timers": "^1.1.0",
-    "sequelize": "^5.18.4",
-    "socket.io": "^2.2.0",
-    "vue-dropdowns": "^1.0.6",
-    "vue-material": "^1.0.0-beta-11",
-    "vuetify": "^2.0.17"
+    "sequelize": "^5.21.7",
+    "socket.io": "^2.3.0",
+    "vue-dropdowns": "^1.1.1",
+    "vue-material": "^1.0.0-beta-13",
+    "vuetify": "^2.2.27"
   },
-  "devDependencies": {
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0"
-  }
+  "devDependencies": {}
 }
