--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "enqueue",
+  "name": "enqueue-backend",
   "version": "1.0.0",
   "repository": "https://github.com/pola/enqueue",
   "scripts": {
-    "start": "node backend/index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "better-logging": "^3.5.0",
@@ -17,10 +17,7 @@
     "npm": "^6.14.5",
     "safe-timers": "^1.1.0",
     "sequelize": "^5.21.7",
-    "socket.io": "^2.3.0",
-    "vue-dropdowns": "^1.1.1",
-    "vue-material": "^1.0.0-beta-13",
-    "vuetify": "^2.2.27"
+    "socket.io": "^4.1.1"
   },
   "devDependencies": {}
 }
