--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "better-logging": "^3.5.0",
-    "cas-authentication": "0.0.8",
+    "body-parser": "^1.19.0",
     "connect-history-api-fallback": "^1.6.0",
+    "cookie-parser": "^1.3.5",
     "express": "^4.17.1",
+    "express-openid-connect": "^2.4.0",
     "express-session": "^1.17.1",
     "express-socket.io-session": "^1.3.5",
     "mysql2": "^1.6.5",
