--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,11 +30,24 @@
     "@vue/cli-service": "^4.5.13",
     "babel-eslint": "^10.1.0",
     "deepmerge": "^4.2.2",
-    "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^7.9.0",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-prettier-vue": "^3.1.0",
+    "eslint-plugin-vue": "^7.17.0",
     "fibers": "^5.0.0",
+    "prettier": "^2.6.0",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "vue-template-compiler": "^2.6.12"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true,
+    "singleAttributePerLine": false,
+    "printWidth": 1000,
+    "arrowParens": "avoid"
   }
 }
